# my-board-app

./: LICENSE  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/database/: fixtures.rs  manager.rs  mod.rs
src-tauri/src/database/models/: board.rs  custom_types.rs  group.rs  mod.rs  priority.rs  state.rs  task.rs
src/assets/: .gitignore  app.css  fonts.tar.xz
src/components/: NavBar.vue
src/views/: MainView.vue
