[package]
name = "my-board-app"
version = "0.0.0"
description = "My board is an app to handler devlopment projects locally from your home."
authors = ["João Barreto"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rusqlite = "0.32.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
